# ltx

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  health.py  middleware.py  schemas.py
app/api/v1/: auth.py  videos.py
app/infrastructure/: config.py  database.py  logging.py  models.py  otel.py  security.py
app/infrastructure/generators/: __init__.py  base.py  ltx.py  mock.py
app/infrastructure/storage/: __init__.py  base.py  local.py  s3.py
app/repositories/: job_repository.py  user_repository.py
app/services/: job_service.py  storage_service.py  user_service.py  video_service.py
app/workers/: celery_app.py  tasks.py
docker/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 20260612_initial.py
tests/: conftest.py  test_auth.py  test_tasks.py  test_videos.py
