[tool.poetry]
name = "ltx-platform"
version = "0.1.0"
description = "Production-grade video generation platform around LTX Video model"
authors = ["Antigravity <antigravity@deepmind.google>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.3"
boto3 = "^1.34.69"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-instrumentation-celery = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
